<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:titleTextColor="@android:color/white"
        android:id="@+id/toolbar"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:textSize="18sp"

                />
            <ImageView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/search"
                android:layout_alignParentRight="true"
                android:padding="10dp"
                />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tabHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/tab_home_focus"
            android:gravity="center_horizontal"
            android:text="@string/home"
            android:textColor="@color/tab_focus" />

        <TextView
        android:id="@+id/tabChannel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@mipmap/tab_channel_normal"
        android:gravity="center_horizontal"
        android:text="@string/channel"
        android:textColor="@android:color/white" />
        <TextView
            android:id="@+id/tabPic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/jin_1"
            android:gravity="center_horizontal"
            android:drawablePadding="4dp"
            android:text="@string/pic"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tabStar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/tab_star_normal"
            android:gravity="center_horizontal"
            android:text="@string/star"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tabUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/tab_user_normal"
            android:gravity="center_horizontal"
            android:text="@string/user"
            android:textColor="@android:color/white" />
    </LinearLayout>
    <TextView
        android:id="@+id/toast"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:background="@color/tran"
        android:visibility="gone"
        />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom"
        android:layout_below="@+id/toast" />
</RelativeLayout>